Fix the error of narrow screen footer misaligning

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -251,11 +251,12 @@ footer {
   }
 
   footer {
-    margin-bottom: 1em;
+    margin-bottom: 1.8em;
     flex-direction: column;
   }
 
   .copyright {
     text-align: center;
+    padding: 2px 0 0 0;
   }
 }
